# findata

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  dashboard_app.py  environment.yml  pyproject.toml  requirements.txt  setup.py
data/index_configs/: dax.json  dow30.json  ftse100.json  ndx.json  sp500.json
data/risk_factor_groups/equities/: indices.json  sp500_top100.json
docs/: DASHBOARD.md  QUICKSTART_DASHBOARD.md  QUICKSTART_INDEX_MANAGEMENT.md  QUICKSTART_SP500.md  QUICK_START_INDEX_DATA.md
examples/: client_api_examples.py  index_management_example.py  load_index_data_example.py  sp500_wikipedia_example.py
scripts/: setup_database.py
src/findata/: __init__.py
src/findata/client/: __init__.py  client.py
src/findata/config/: __init__.py  settings.py  user_config.py
src/findata/dashboard/: __init__.py  data_service.py
src/findata/data/: index_updater.py
src/findata/data/database/: __init__.py  index_db.py  schema.py  timeseries_db.py
src/findata/data/loaders/: __init__.py  equity_loader.py
src/findata/data/parsers/: __init__.py  sp500_wikipedia.py  wikipedia_index_parser.py
src/findata/data/risk_factor_groups/: __init__.py  base_group.py  equity_group.py
src/findata/data/validators/: __init__.py  timeseries_validator.py
src/findata/utils/: __init__.py  logging.py
tests/: conftest.py  test_client.py  test_sp500_parser.py  test_timeseries_db.py  test_user_config.py
